testdata/golden/sema/invalid/concurrency/send_contains_nosend.fmt
// ERROR: @send type contains @nosend field

@nosend
type FileHandle = { fd: int };

@send
type BadSendType = {
    name: string,
    handle: FileHandle,  // ERROR: @nosend field in @send type
};
